[gd_scene load_steps=4 format=3 uid="uid://dkurtulus_campaign_card"]

[ext_resource type="Script" path="res://scenes/campaign_selection/campaign_card.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/alfabet98.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.137255, 0.0588235, 0.0588235, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.831373, 0.686275, 0.215686, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CampaignCard" type="PanelContainer"]
custom_minimum_size = Vector2(380, 500)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ImageContainer" type="AspectRatioContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
ratio = 1.77778

[node name="CampaignImage" type="TextureRect" parent="VBoxContainer/ImageContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Campaign Title"
horizontal_alignment = 1

[node name="YearLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_font_sizes/font_size = 20
text = "1919-1920"
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.878431, 0.878431, 0.815686, 0.9)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Campaign description goes here..."
fit_content = true
scroll_active = false

[node name="SelectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_hover_color = Color(0.137255, 0.0588235, 0.0588235, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Select"
